--- a/PersonalSite/Pages/Index.razor
+++ b/PersonalSite/Pages/Index.razor
@@ -17,14 +17,14 @@
             at various companies and in many fields.</p>
 
         <p>I'm driven by creativity and a desire to share what I have learned with others. You can see what I have been
-            up to in my portfolio and on GitHub</p>
+            up to in my portfolio and on GitHub.</p>
 
-        <p>My skills are listed in <a href="/resume">my resume</a>.</p>
+        <p>My experiences and skills are listed in <a href="/resume">my resume</a>.</p>
 
         <h2>My Views on Software Development</h2>
 
         <p>To me, software development is not just about programming. The technical details are just part of the toolbox
-            that we use to achieve the wonderful things that is software The real value is in what we produce; in what
+            that we use to achieve the wonderful things that is software. The real value is in what we produce; in what
             other people use to improve their work and daily lives.</p>
 
         <p>When making software, we as developers, have to use our technical skills to design and model the system
