--- a/PersonalSite/Shared/Logo.razor
+++ b/PersonalSite/Shared/Logo.razor
@@ -1,4 +1,4 @@
-<a class="@Class" href="@Href">
+<a class="@Class" href="@Href" target="_blank">
     <img src="@(Src ?? Placeholder)" alt="@Alt" class="mt-3">
 </a>
 
