--- a/PersonalSite/Pages/Index.razor
+++ b/PersonalSite/Pages/Index.razor
@@ -2,38 +2,7 @@
 @layout PageLayout
 @inject NavigationManager NavigationManager
 
-<PageTitle>About me  - Marina Sundström</PageTitle>
-
-<h1 class="post-title">About me</h1>
-<div class="post-line"></div>
-
-<div class="row">
-    <div class="text-content col-xxl-10">
-        <p>I have been programming since 2007. My interest back then was to figure out how it all works. Since then I
-            have been learning a lot about software engineering, both professionally and in my free time.</p>
-
-        <p>My career began back in 2014, when I was working as a software developer for a local company that provided
-            Internet and IT services. After that I went into consulting, where I got to experience software development
-            at various companies and in many fields.</p>
-
-        <p>I'm driven by creativity and a desire to share what I have learned with others. You can see what I have been
-            up to in my portfolio and on GitHub.</p>
-
-        <p>My experiences and skills are listed in <a href="/resume">my resume</a>.</p>
-
-        <h2>My Views on Software Development</h2>
-
-        <p>To me, software development is not just about programming. The technical details are just part of the toolbox
-            that we use to achieve the wonderful things that is software. The real value is in what we produce; in what
-            other people use to improve their work and daily lives.</p>
-
-        <p>When making software, we as developers, have to use our technical skills to design and model the system
-            according to the requirements that forms a basis for it.</p>
-
-        <p>It is therefore important for us as developers to have sufficient knowledge about the domain, and how the
-            software that we build is being used. We need to have a broader perspective than just the technical.</p>
-    </div>
-</div>
+<PageTitle>Marina Sundström</PageTitle>
 
 @code {
     [Parameter]
@@ -45,6 +14,10 @@
         if (Page is not null)
         {
             NavigationManager.NavigateTo(Page);
+        }
+        else
+        {
+            NavigationManager.NavigateTo("/about");
         }
     }
 }
