--- a/PersonalSite/Shared/EducationView.razor
+++ b/PersonalSite/Shared/EducationView.razor
@@ -40,6 +40,15 @@
         }
         else 
         {
+            var breakIndex = education.Description.IndexOf(".");
+            if(breakIndex == -1)
+            {
+                breakIndex = education.Description.IndexOf("\n");
+            }
+            var content = breakIndex == -1 ? education.Description : education.Description.Substring(0, breakIndex + 1);
+
+            <MarkdownView Content="@content" />
+            
             <small><a href="#" @onclick="ToggleShowMore" @onclick:preventDefault><i class="fa fa-chevron-down me-1"></i> Show more</a></small>
         }
     </div>
