--- a/PersonalSite/Shared/ExperienceView.razor
+++ b/PersonalSite/Shared/ExperienceView.razor
@@ -37,6 +37,14 @@ else
 }
 else 
 {
+   var breakIndex = experience.Description.IndexOf(".");
+   if(breakIndex == -1)
+   {
+       breakIndex = experience.Description.IndexOf("\n");
+   }
+   var content = breakIndex == -1 ? experience.Description : experience.Description.Substring(0, breakIndex + 1);
+
+   <MarkdownView Content="@content" />
 
     <small><a href="#" @onclick="ToggleShowMore" @onclick:preventDefault><i class="fa fa-chevron-down me-1"></i> Show more</a></small>
 }
